--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -29,10 +29,10 @@ scrape_configs:
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
     static_configs:
-      - targets: ["localhost:9100"]
+      - targets: ["host.docker.internal:9100"]
 
   - job_name: "python app"
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
     static_configs:
-      - targets: ["localhost:5005"]
+      - targets: ["host.docker.internal:5005"]
